Fix horizontal scrollbar on artifact mobile so that it doesn't appear - closes #151

--- a/app/views/artifact/styles-reports.styl
+++ b/app/views/artifact/styles-reports.styl
@@ -10,6 +10,7 @@
 
 .report-title
   block-align center
+  text-align center
 
 .report-header
   margin-top gd(3)
