--- a/app/views/artifact/styles-timeline.styl
+++ b/app/views/artifact/styles-timeline.styl
@@ -40,6 +40,8 @@
 
 .timeline-conductor
   white-space nowrap
+  & > *
+    white-space normal
 
   //&.ui-scrollfix
   //padding-top 72px
